--- a/logstash/pipeline/kafka-demo.conf
+++ b/logstash/pipeline/kafka-demo.conf
@@ -2,26 +2,26 @@
 input {
   kafka {
     bootstrap_servers => "kafka:9092"
-    topics => ["demo"]
+    topics => ["kafka-demo"]
     group_id => "logstash-demo"
     auto_offset_reset => "earliest"
     codec => "json"
   }
 }
 
-filter {
-  # 你的 JSON 是 "timestamp"，轉成 ES 可用的 @timestamp
-  date {
-    match  => ["timestamp", "ISO8601"]
-    target => "@timestamp"
-  }
-
-  # 可選：統一欄位命名，方便 Kibana/Elastic 方案
-  mutate {
-    rename => { "service" => "service.name" }
-    rename => { "level"   => "log.level" }
-  }
-}
+# filter {
+#   # 你的 JSON 是 "timestamp"，轉成 ES 可用的 @timestamp
+#   date {
+#     match  => ["timestamp", "ISO8601"]
+#     target => "@timestamp"
+#   }
+# 
+#   # 可選：統一欄位命名，方便 Kibana/Elastic 方案
+#   mutate {
+#     rename => { "service" => "service.name" }
+#     rename => { "level"   => "log.level" }
+#   }
+# }
 
 output {
   # 傳到 Elasticsearch（HTTP 有開 TLS）
