--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
       - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
       - ./certs/ca:/usr/share/logstash/config/certs:ro
+      - ./backup:/usr/share/logstash/data
     ports:
       - "5044:5044"
       - "5000:5000/tcp"
