--- a/logstash/pipeline/kafka-demo.conf
+++ b/logstash/pipeline/kafka-demo.conf
@@ -6,6 +6,21 @@ input {
     group_id => "logstash-demo"
     auto_offset_reset => "earliest"
     codec => "json"
+
+    # 防止訊息丟失：調整 Kafka consumer 配置
+    # 參考：https://www.elastic.co/guide/en/logstash/current/plugins-inputs-kafka.html
+
+    # 增加 session timeout 給 ES 寫入更多時間
+    session_timeout_ms => "30000"
+
+    # 減少每次 poll 的記錄數，降低處理壓力
+    max_poll_records => "100"
+
+    # 增加心跳間隔
+    heartbeat_interval_ms => "3000"
+
+    # 設置 consumer threads
+    consumer_threads => 1
   }
 }
 
